--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "gatsby": "^4.0.2",
+    "gatsby-plugin-google-analytics": "^4.0.0",
     "gatsby-plugin-styled-components": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
